-Fix images, fix Index page carousel not scrolling down on mobile, fix tranlsations not translting on netlify

--- a/css/order.scss
+++ b/css/order.scss
@@ -25,6 +25,7 @@
       text-transform: uppercase;
       color: $heading-color;
       margin-bottom: 2.125rem; // 34px
+      text-align: center;
     }
 
     p {
